Projects Page Done

--- a/src/assets/projects.json
+++ b/src/assets/projects.json
@@ -1,7 +1,7 @@
 {
   "1": {
     "id": "1",
-    "image": "src/assets/adidas.png",
+    "image": "../assets/adidas.png",
     "name": "Adidas Clone",
     "desc": "An e-commerce website with admin dashboard.",
     "tags": "ReactJS, MongoDB, Express, NodeJS, Firebase, TailwindCSS",
@@ -10,7 +10,7 @@
   },
   "2": {
     "id": "2",
-    "image": "src/assets/adidas.png",
+    "image": "../assets/adidas.png",
     "name": "Adidas Clone",
     "desc": "An e-commerce website with admin dashboard.",
     "tags": "ReactJS, MongoDB, Express, NodeJS, Firebase, TailwindCSS",
@@ -19,7 +19,7 @@
   },
   "3": {
     "id": "3",
-    "image": "src/assets/adidas.png",
+    "image": "../assets/adidas.png",
     "name": "Adidas Clone",
     "desc": "An e-commerce website with admin dashboard.",
     "tags": "ReactJS, MongoDB, Express, NodeJS, Firebase, TailwindCSS",
@@ -27,8 +27,8 @@
     "githubUrl": "https://github.com/sahilhedau49/adidas-clone"
   },
   "4": {
-    "id": "1",
-    "image": "src/assets/adidas.png",
+    "id": "4",
+    "image": "../assets/adidas.png",
     "name": "Adidas Clone",
     "desc": "An e-commerce website with admin dashboard.",
     "tags": "ReactJS, MongoDB, Express, NodeJS, Firebase, TailwindCSS",
@@ -36,8 +36,8 @@
     "githubUrl": "https://github.com/sahilhedau49/adidas-clone"
   },
   "5": {
-    "id": "2",
-    "image": "src/assets/adidas.png",
+    "id": "5",
+    "image": "../assets/adidas.png",
     "name": "Adidas Clone",
     "desc": "An e-commerce website with admin dashboard.",
     "tags": "ReactJS, MongoDB, Express, NodeJS, Firebase, TailwindCSS",
@@ -45,8 +45,8 @@
     "githubUrl": "https://github.com/sahilhedau49/adidas-clone"
   },
   "6": {
-    "id": "3",
-    "image": "src/assets/adidas.png",
+    "id": "6",
+    "image": "../assets/adidas.png",
     "name": "Adidas Clone",
     "desc": "An e-commerce website with admin dashboard.",
     "tags": "ReactJS, MongoDB, Express, NodeJS, Firebase, TailwindCSS",
@@ -54,8 +54,8 @@
     "githubUrl": "https://github.com/sahilhedau49/adidas-clone"
   },
   "7": {
-    "id": "1",
-    "image": "src/assets/adidas.png",
+    "id": "7",
+    "image": "../assets/adidas.png",
     "name": "Adidas Clone",
     "desc": "An e-commerce website with admin dashboard.",
     "tags": "ReactJS, MongoDB, Express, NodeJS, Firebase, TailwindCSS",
@@ -63,8 +63,8 @@
     "githubUrl": "https://github.com/sahilhedau49/adidas-clone"
   },
   "8": {
-    "id": "2",
-    "image": "src/assets/adidas.png",
+    "id": "8",
+    "image": "../assets/adidas.png",
     "name": "Adidas Clone",
     "desc": "An e-commerce website with admin dashboard.",
     "tags": "ReactJS, MongoDB, Express, NodeJS, Firebase, TailwindCSS",
@@ -72,8 +72,8 @@
     "githubUrl": "https://github.com/sahilhedau49/adidas-clone"
   },
   "9": {
-    "id": "3",
-    "image": "src/assets/adidas.png",
+    "id": "9",
+    "image": "../assets/adidas.png",
     "name": "Adidas Clone",
     "desc": "An e-commerce website with admin dashboard.",
     "tags": "ReactJS, MongoDB, Express, NodeJS, Firebase, TailwindCSS",
