--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "firebase": "^10.11.0",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.10",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3"
   },
