--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "firebase": "^10.11.0",
+    "framer-motion": "^11.1.9",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.10",
     "react-dom": "^18.2.0",
